<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hacker News Push</string>
    <string name="application_name">Hacker Push</string>
    <string name="suggestion_auth">com.hpush</string>

    <string name="lbl_hello">Hello %1$s!</string>
    <string name="lbl_turn_on_push_info">Do you want receiver push-messages to get Top-News from Hack-News?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_blog">HN Blog</string>
    <string name="lbl_recent">Recent</string>
    <string name="lbl_setting">Settings</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_about">About</string>
    <string name="lbl_forward">Forward</string>
    <string name="lbl_backward">Backward</string>
    <string name="lbl_last_messages">Latest</string>
    <string name="lbl_bookmark">Bookmark</string>
    <string name="lbl_item_bookmark">Bookmark</string>
    <string name="lbl_item_open_link">Open</string>
    <string name="lbl_item_share">Share</string>
    <string name="lbl_comments">Comments</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_tweet">Tweet</string>
    <string name="lbl_login_gplus">Google+ login…</string>
    <string name="lbl_login_fail">I can not login Google+ …</string>
    <string name="lbl_logout_gplus">Logout</string>
    <string name="lbl_update_from_hacker_news">%1$s updates from Hacker News.</string>
    <string name="lbl_has_been_bookmarked">This article has been bookmarked.</string>
    <string name="lbl_play_service">This application needs Google Play Service, you must install it first.</string>
    <string name="lbl_share_app_title">A good App you should have: %s</string>
    <string name="lbl_share_app_content">Hello!\n\n\u00A0\u00A0\u00A0\u00A0Subscribe push-news from Hacker-News?\n\nDownload:\nhttp://tinyurl.com/pcopzdh</string>
    <string name="lbl_share_item_title">Hacker News Push</string>
    <string name="lbl_share_item_content">%1$s\n%2$s\n\nDownload Hacker News Push App:\nhttp://tinyurl.com/pcopzdh</string>
    <string name="lbl_total_messages_head">You have</string>
    <string name="lbl_total_messages_tail">message(s).</string>
    <string name="lbl_no_data">There\'re no messages at moment, however you can </string>
    <string name="lbl_no_push_set">You have not open your PUSH option, however you can </string>
    <string name="lbl_no_push_for_subscribe">Open PUSH then subscribe.</string>
    <string name="lbl_app_link">http://tinyurl.com/pcopzdh</string>
    <string name="lbl_finished">✔</string>
    <string name="lbl_failed">✘</string>
    <string name="lbl_welcome">Welcome to %1$s\na free and lightweight push-tool of HN!</string>
    <string name="lbl_connect_google">Connecting on Google…</string>
    <string name="lbl_sync_old_data">Synchronizing old data…</string>


    <string name="msg_push_registering">Signing in push…</string>
    <string name="msg_push_unregistering">Signing out push…</string>
    <string name="msg_app_init">Initialization…</string>
    <string name="msg_save_data">Saving data…</string>
    <string name="msg_remove_all">Remove all messages here?</string>
    <string name="msg_saved_settings_successfully">Saved setting successfully.</string>
    <string name="msg_saved_account_successfully">Saved the push-account on server successfully.</string>
    <string name="msg_deleted_account_successfully">Removed the push-account on server successfully.</string>
    <string name="msg_no_data">No data!</string>
    <string name="msg_welcome">Welcome!</string>
    <string name="msg_welcome_return">Welcome return!</string>
    <string name="msg_sync_failed_go_on">Can\'t synchronize at moment, but don\'t worry you can skip it.</string>
    <string name="msg_clear_daily">Thank you. Get more information from HN by starting here.</string>
    <string name="msg_clear_all">Thank you. It is so appreciated to hear about your feeling.</string>
    <string name="msg_permission_prompt">Without "Read Phone State" and "Write External Storage" the App can\'t work…</string>

    <string name="setting_push_title">@string/lbl_turn_on_push_info</string>
    <string name="setting_push_cat">Push</string>
    <string name="setting_push_on">On</string>
    <string name="setting_push_off">Off</string>
    <string name="setting_push_properties_cat">Properties</string>
    <string name="setting_only_save_latest">Only save the latest messages and remove old ones before saving?</string>
    <string name="setting_allow_empty_url">Allow messages that don\'t have external links.</string>
    <string name="setting_view">View</string>
    <string name="setting_sort">Sort order by</string>
    <string-array name="setting_sort_types">
        <item>Scores</item>
        <item>Arrival</item>
        <item>Creation</item>
        <item>Comments</item>
    </string-array>
    <string-array name="setting_sort_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="setting_others">Others</string>
    <string name="setting_sound">Tone</string>
    <string-array name="setting_sound_types">
        <item>Silence</item>
        <item>Horn</item>
        <item>Signal</item>
        <item>S.O.S</item>
    </string-array>
    <string-array name="setting_sound_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="setting_sort_scores">Scores</string>
    <string name="setting_sort_arrival">Arrival</string>
    <string name="setting_sort_creation">Creation</string>
    <string name="setting_sort_comments">Comments</string>
    <string name="setting_subscribe_top_stories">Subscribe top stories.</string>
    <string name="setting_subscribe_new_stories">Subscribe new stories.</string>
    <string name="setting_subscribe_ask_stories">Subscribe ask stories.</string>
    <string name="setting_subscribe_show_stories">Subscribe Show-HN.</string>
    <string name="setting_subscribe_job_stories">Subscribe job stories.</string>
    <string name="setting_subscribe_summary">Subscribe summary.</string>

    <string name="subscribing_title">Subscribe topics</string>
    <string name="subscribing_top_stories">Subscribing top stories…</string>
    <string name="subscribing_new_stories">Subscribing new stories…</string>
    <string name="subscribing_ask_stories">Subscribing ask stories…</string>
    <string name="subscribing_show_stories">Subscribing show stories…</string>
    <string name="subscribing_job_stories">Subscribing job stories…</string>
    <string name="subscribing_summary">Subscribing summary…</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body">&lt;b&gt;%1$s &lt;/b&gt;&lt;br&gt;Version %2$s &lt;br&gt;</string>
    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>
    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>
    <string name="about_eula_legal_text">Your use of this application is governed by a)Activating permissions of
        hardware that the features of this application need and work well. b)The Google Terms of
        Service (http://www.google.com/intl/en/policies/terms/), Google\'s Privacy
        Policy(http://www.google.com/intl/en/policies/privacy/). c)Any applicable Google service-specific terms of service of privacy
        policies. Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.\n\n\nBy using the application, your agree to the use of your data and permissions of your hardware in
        accordance with Google\'s Privacy Policy and Google Terms of Service.</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_agree">I agree.</string>
    <string name="btn_not_agree">I do not agree.</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_begin">Begin now</string>
    <string name="btn_close_app">Close app</string>
    <string name="btn_synchronize">synchronize</string>
    <string name="btn_skip">Skip</string>

    <string name="applicationId">1038826132811079</string>
    <string name="ad_banner_unit_id">ca-app-pub-9133982521997162/3161598133</string>
    <string name="ad_inters_unit_id">ca-app-pub-9133982521997162/9212548933</string>
    <string name="play_service_url">market://details?id=com.google.android.gms</string>
    <string name="play_service_web">https://play.google.com/store/apps/details?id=com.google.android.gms</string>


    <string name="no_app_to_share">No app installed to share data of type %s!</string>
    <string name="no_share_type">No share type specified!</string>
    <string name="error_occurred">Sorry, an error occurred.</string>


    <string name="action_more_apps">More Apps</string>
</resources>
