<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/setting_push_cat"
        android:layout="@layout/setting_entry">
        <CheckBoxPreference
            android:key="key.push.setting"
            android:title="@string/setting_push_title"
            android:summaryOn="@string/setting_push_on"
            android:summaryOff="@string/setting_push_off"
            android:layout="@layout/setting_item"
            android:defaultValue="false" />


        <CheckBoxPreference
            android:key="key.push.topstories"
            android:title="@string/setting_subscribe_top_stories"
            android:layout="@layout/setting_item"
            android:defaultValue="false" />


        <CheckBoxPreference
            android:key="key.push.newstories"
            android:title="@string/setting_subscribe_new_stories"
            android:layout="@layout/setting_item"
            android:defaultValue="false" />


        <CheckBoxPreference
            android:key="key.push.askstories"
            android:title="@string/setting_subscribe_ask_stories"
            android:layout="@layout/setting_item"
            android:defaultValue="false" />


        <CheckBoxPreference
            android:key="key.push.showstories"
            android:title="@string/setting_subscribe_show_stories"
            android:layout="@layout/setting_item"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="key.push.jobstories"
            android:title="@string/setting_subscribe_job_stories"
            android:layout="@layout/setting_item"
            android:defaultValue="false" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_push_properties_cat"
        android:layout="@layout/setting_entry">
        <CheckBoxPreference
            android:key="key.allow.empty.url"
            android:title="@string/setting_allow_empty_url"
            android:summaryOn="@string/lbl_yes"
            android:summaryOff="@string/lbl_no"
            android:layout="@layout/setting_item"
            android:defaultValue="@bool/default_allow_empty_url" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/setting_view"
        android:layout="@layout/setting_entry">
        <ListPreference
            android:key="key.sort.type"
            android:title="@string/setting_sort"
            android:layout="@layout/setting_item"
            android:entries="@array/setting_sort_types"
            android:entryValues="@array/setting_sort_values" />
    </PreferenceCategory>



    <PreferenceCategory
        android:title="@string/setting_others"
        android:layout="@layout/setting_entry">
        <ListPreference
            android:key="key.sound.type"
            android:title="@string/setting_sound"
            android:layout="@layout/setting_item"
            android:entries="@array/setting_sound_types"
            android:entryValues="@array/setting_sound_values"
             />
    </PreferenceCategory>

</PreferenceScreen>