<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.schautup.activities.HomePageWebViewActivity">
    <item
        android:id="@+id/action_backward"
        android:title="@string/lbl_backward"
        android:icon="@drawable/ic_action_backward"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_forward"
        android:title="@string/lbl_forward"
        android:icon="@drawable/ic_action_forward"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_search"
        android:title="@string/lbl_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_facebook"
        android:icon="@drawable/ic_action_facebook"
        android:title="@string/lbl_facebook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tweet"
        android:icon="@drawable/ic_action_tweet"
        android:title="@string/lbl_tweet"
        app:showAsAction="never"
        android:visible="@bool/default_tweet_used" />

    <item
        android:id="@+id/action_item_comment"
        android:title="@string/lbl_comments"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_item_share"
        android:title="@string/lbl_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_item_bookmark"
        android:title="@string/lbl_bookmark"
        app:showAsAction="never" />

</menu>