<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".app.activities.MainActivity">

    <item
        android:id="@+id/action_sort"
        android:title="@string/setting_sort"
        app:actionProviderClass="com.hpush.views.SortActionViewProvider"
        android:icon="@drawable/ic_action_view_sort"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share_app"
        android:title="@string/lbl_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_setting"
        android:title="@string/lbl_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/lbl_about"
        app:showAsAction="never" />
</menu>
