<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.activities.SubscribeTopicsActivity">

    <data>


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/subscribe_vg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/topstories_vg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.hpush.views.FontTextView
                        android:id="@+id/topstories_status_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/subscribing_summary"
                        android:textColor="@color/common_black"
                        android:visibility="gone"
                        app:font="thin" />

                    <Button
                        android:id="@+id/topstories_retry_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_retry"
                        android:visibility="gone" />
                </LinearLayout>

                <com.hpush.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/subscribing_top_stories"
                    android:textColor="@color/common_black"
                    app:font="light" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/newstories_vg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topstories_vg"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.hpush.views.FontTextView
                        android:id="@+id/newstories_status_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/subscribing_summary"
                        android:textColor="@color/common_black"
                        android:visibility="gone"
                        app:font="thin" />

                    <Button
                        android:id="@+id/newstories_retry_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/btn_retry"
                        android:visibility="gone" />
                </LinearLayout>

                <com.hpush.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/subscribing_new_stories"
                    android:textColor="@color/common_black"
                    app:font="light" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/askstories_vg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newstories_vg"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.hpush.views.FontTextView
                        android:id="@+id/askstories_status_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/subscribing_summary"
                        android:textColor="@color/common_black"
                        android:visibility="gone"
                        app:font="thin" />

                    <Button
                        android:id="@+id/askstories_retry_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/btn_retry"
                        android:visibility="gone" />
                </LinearLayout>

                <com.hpush.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/subscribing_ask_stories"
                    android:textColor="@color/common_black"
                    app:font="light" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/showstories_vg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/askstories_vg"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.hpush.views.FontTextView
                        android:id="@+id/showstories_status_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/subscribing_summary"
                        android:textColor="@color/common_black"
                        android:visibility="gone"
                        app:font="thin" />

                    <Button
                        android:id="@+id/showstories_retry_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/btn_retry"
                        android:visibility="gone" />
                </LinearLayout>

                <com.hpush.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/subscribing_show_stories"
                    android:textColor="@color/common_black"
                    app:font="light" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/jobstories_vg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/showstories_vg"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.hpush.views.FontTextView
                        android:id="@+id/jobstories_status_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/subscribing_summary"
                        android:textColor="@color/common_black"
                        android:visibility="gone"
                        app:font="thin" />

                    <Button
                        android:id="@+id/jobstories_retry_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/btn_retry"
                        android:visibility="gone" />
                </LinearLayout>

                <com.hpush.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/subscribing_job_stories"
                    android:textColor="@color/common_black"
                    app:font="light" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/summary_vg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jobstories_vg"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.hpush.views.FontTextView
                        android:id="@+id/summary_status_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/subscribing_summary"
                        android:textColor="@color/common_black"
                        android:visibility="gone"
                        app:font="thin" />

                    <Button
                        android:id="@+id/summary_retry_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/btn_retry"
                        android:visibility="gone" />
                </LinearLayout>

                <com.hpush.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/subscribing_summary"
                    android:textColor="@color/common_black"
                    app:font="light" />

            </LinearLayout>


            <com.hpush.views.MaterialRippleLayout
                android:id="@+id/close_btn"
                style="@style/MaterialRippleLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/summary_vg"
                android:text="@string/btn_close"
                android:visibility="invisible"
                android:background="@color/common_transparent"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/btn_close"
                    android:textColor="@color/common_white" />

            </com.hpush.views.MaterialRippleLayout>
        </RelativeLayout>
    </ScrollView>

</layout>